// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CIExecutionCardSummary /> tests branch snapshot 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="main"
    >
      <div
        class="badge"
      >
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main icon StyledProps--color StyledProps--color-primary7"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="branchName"
        >
          master
        </span>
      </div>
      <div
        class="badge"
      >
        <span
          class="bp3-icon bp3-icon-git-commit StyledProps--main icon StyledProps--color StyledProps--color-primary7"
          icon="git-commit"
        >
          <svg
            data-icon="git-commit"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              git-commit
            </desc>
            <path
              d="M15 7h-3.14c-.45-1.72-2-3-3.86-3S4.59 5.28 4.14 7H1c-.55 0-1 .45-1 1s.45 1 1 1h3.14c.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3H15c.55 0 1-.45 1-1s-.45-1-1-1zm-7 3c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span>
          1595372
        </span>
      </div>
    </div>
    <div
      class="commitsInfo"
    >
      <p
        class="StyledProps--font StyledProps--main lastCommit"
        style="cursor: pointer;"
      >
        <span
          class="bp3-icon bp3-icon-git-commit StyledProps--main icon"
          icon="git-commit"
        >
          <svg
            data-icon="git-commit"
            height="14"
            viewBox="0 0 16 16"
            width="14"
          >
            <desc>
              git-commit
            </desc>
            <path
              d="M15 7h-3.14c-.45-1.72-2-3-3.86-3S4.59 5.28 4.14 7H1c-.55 0-1 .45-1 1s.45 1 1 1h3.14c.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3H15c.55 0 1-.45 1-1s-.45-1-1-1zm-7 3c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main message"
        >
          fix: [CDNG-11399]: setting page number as 1 for polling (#4731)
        </p>
        <p
          class="StyledProps--font StyledProps--main commitId"
          style="cursor: pointer;"
        >
          <a
            class="label"
            href="https://github.com/wings-software/nextgenui/commit/15953724c19abb82c391bb380f4470a23da6412a"
            rel="noreferrer"
            target="_blank"
          >
            1595372
          </a>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="cursor: pointer;"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="copy"
                >
                  <svg
                    height="14"
                    viewBox="0 0 14 16"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="#22272D"
                      stroke="#22272D"
                      stroke-width="0.25"
                    >
                      <path
                        d="M12.89.55H6.388a3.28 3.28 0 00-3.043 2.067C1.672 2.76.34 4.17.34 5.87v9.271c0 .17.138.308.307.308H7.15c1.35 0 2.543-.825 3.042-2.066 1.673-.144 3.006-1.554 3.006-3.255V.86a.307.307 0 00-.308-.31zM7.15 14.835H.955V5.87c0-1.299.955-2.4 2.199-2.624-.002.01-.001.021-.003.032-.031.182-.05.367-.05.552v9.27c0 .17.138.308.308.308h6.105a2.67 2.67 0 01-2.364 1.425zm5.432-4.705a2.68 2.68 0 01-2.607 2.664H3.716V3.831a2.672 2.672 0 012.671-2.665h6.195v8.963z"
                      />
                      <path
                        d="M6.11 6.672a.308.308 0 000 .615h1.732V9.02a.308.308 0 00.616 0V7.287h1.733a.308.308 0 000-.615H8.458V4.939a.308.308 0 00-.616 0v1.733H6.11z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </span>
          </span>
        </p>
      </p>
    </div>
  </div>
</div>
`;

exports[`<CIExecutionCardSummary /> tests default snapshot 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="main"
    >
      <div
        class="badge"
      >
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main icon StyledProps--color StyledProps--color-primary7"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="branchName"
        >
          master
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CIExecutionCardSummary /> tests pull request snapshot 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="main"
    >
      <div
        class="badge"
      >
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main icon"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="ellipsis sourceBranch"
        >
          feat/variables-ux
        </span>
      </div>
      <span>
        ⟶
      </span>
      <div
        class="badge"
      >
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main icon"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="ellipsis targetBranch"
        >
          master
        </span>
      </div>
    </div>
    <div
      class="pullRequestInfo"
    >
      <span
        class="bp3-icon bp3-icon-git-pull StyledProps--main icon"
        icon="git-pull"
      >
        <svg
          data-icon="git-pull"
          height="14"
          viewBox="0 0 16 16"
          width="14"
        >
          <desc>
            git-pull
          </desc>
          <path
            d="M3 1C1.34 1 0 2.34 0 4c0 1.3.84 2.4 2 2.82v3.37C.84 10.6 0 11.7 0 13c0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.3-.84-2.4-2-2.82V6.82C5.16 6.4 6 5.3 6 4c0-1.66-1.34-3-3-3zm0 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm0-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm11 5.18V6c0-1.66-1.34-3-3-3H9.41l1.29-1.29c.19-.18.3-.43.3-.71A1.003 1.003 0 009.29.29l-3 3C6.11 3.47 6 3.72 6 4c0 .28.11.53.29.71l3 3a1.003 1.003 0 001.42-1.42L9.41 5H11c.55 0 1 .45 1 1v4.18A2.996 2.996 0 0013 16c1.66 0 3-1.34 3-3 0-1.3-.84-2.4-2-2.82zM13 14c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main"
      >
        feat:  [PIE-5]: variables ux update
      </p>
      <a
        class="prNumber"
        href="https://github.com/wings-software/nextgenui"
        rel="noopener noreferrer"
        target="_blank"
      >
        ci.prSymbol
        4728
      </a>
      <div
        class="pullRequestStatus"
      >
        closed
      </div>
    </div>
  </div>
</div>
`;
